[package]
name = "example"
version = "0.12.0"
edition = "2021"

[dependencies]
clap = "4.0"
risc0-zkvm = { path = "../../risc0/zkvm" }
serde = "1.0"
sha-methods2 = { path = "methods" }
k256 = { version = "0.13", features = ["serde"] }
hex = "0.4"
rand_core = "0.6.3"
hex-literal = "0.4.1"
mjson-core = { path = "core" }
bincode = "1.3"

[dev-dependencies]
hex = "0.4"

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
metal = ["risc0-zkvm/metal"]

[[bin]]
name = "verify"
path = "src/verify.rs"  # or path = "src/bin/verify_main.rs"

