[package]
name = "mjson-core"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { path = "../../../risc0/zkvm", default-features = false }
serde = "1.0"
k256 = { version = "=0.13.1", features = ["arithmetic", "serde", "expose-field", "std", "ecdsa"], default_features = false }

[patch.crates-io]
# Placing this patch statement in the workspace Cargo.toml will add RISC Zero SHA-256 accelerator
# support for all downstream usages of the `sha2` crate.
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.1-risc0"  }
