[package]
name = "hash"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
json = "0.12"
risc0-zkvm = { path = "../../../../risc0/zkvm", default-features = false, features = ["std"] }
sha2 = "0.10.6"
k256 = { version = "=0.13.1", features = ["arithmetic", "serde", "expose-field", "std", "ecdsa"], default_features = false }
mjson-core = { path = "../../core" }

[patch.crates-io]
# Placing this patch statement in the workspace Cargo.toml will add RISC Zero SHA-256 accelerator
# support for all downstream usages of the `sha2` crate.
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2/v0.10.6-risc0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.1-risc0"  }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.2-risc0" }
